--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,21 @@ services:
      - "8080:80"
    volumes:
      - pgadmin-data:/var/lib/pgadmin
+
+#  cloudbeaver:
+#    container_name: cloudbeaver
+#    image: dbeaver/cloudbeaver:latest
+#    restart: always
+#    #  environment:
+#    #    PGADMIN_DEFAULT_EMAIL: hsmeh.dev@gmail.com
+#    #    PGADMIN_DEFAULT_PASSWORD: admin
+#    #    PGADMIN_LISTEN_PORT: 80
+#    ports:
+#      - "8081:8978"
+#    volumes:
+#      - dbeaver-data:/var/cloudbeaver/workspace
+
 volumes:
  db-data:
  pgadmin-data:
+#  dbeaver-data:
