--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "start": "node dist/index.js",
     "start2": "ts-node src/index.ts",
     "dev2": "nodemon --exec ts-node src/index.ts",
-    "create:migration" : "mikro-orm migration:create",
-    "migration:up" : "mikro-orm migration:up"
+    "create:migration": "mikro-orm migration:create",
+    "migration:up": "mikro-orm migration:up"
   },
   "keywords": [],
   "author": "",
@@ -22,12 +22,14 @@
     "@mikro-orm/postgresql": "^5.1.2",
     "@types/node": "^17.0.26",
     "apollo-server-express": "^3.6.7",
+    "argon2": "^0.28.5",
     "express": "^4.18.0",
     "graphql": "^15.3.0",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "yarn": "^1.22.18"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
