--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "start2": "ts-node src/index.ts",
     "dev2": "nodemon --exec ts-node src/index.ts",
     "create:migration": "mikro-orm migration:create",
-    "migration:up": "mikro-orm migration:up"
+    "migration:up": "mikro-orm migration:up",
+    "docker-up": "docker-compose up",
+    "docker-down": "docker-compose down"
   },
   "keywords": [],
   "author": "",
@@ -20,19 +22,27 @@
     "@mikro-orm/core": "^5.1.2",
     "@mikro-orm/migrations": "^5.1.2",
     "@mikro-orm/postgresql": "^5.1.2",
+    "@types/cors": "^2.8.12",
     "@types/node": "^17.0.26",
+    "apollo-server-core": "^3.7.0",
     "apollo-server-express": "^3.6.7",
     "argon2": "^0.28.5",
+    "connect-redis": "^6.1.3",
+    "cors": "^2.8.5",
     "express": "^4.18.0",
+    "express-session": "^1.17.3",
     "graphql": "^15.3.0",
     "pg": "^8.7.3",
+    "redis": "^4.1.0",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
     "typescript": "^4.6.3",
     "yarn": "^1.22.18"
   },
   "devDependencies": {
+    "@types/connect-redis": "^0.0.18",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
     "nodemon": "^2.0.15",
     "ts-node": "^10.7.0"
   },
