--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "apollo-server-core": "^3.7.0",
     "apollo-server-express": "^3.6.7",
     "argon2": "^0.28.5",
+    "body-parser": "^1.20.0",
     "connect-redis": "^6.1.3",
     "cors": "^2.8.5",
     "express": "^4.18.0",
