--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "@mikro-orm/migrations": "^5.1.2",
     "@mikro-orm/postgresql": "^5.1.2",
     "@types/cors": "^2.8.12",
+    "@types/ioredis": "^4.28.10",
     "@types/node": "^17.0.26",
+    "@types/nodemailer": "^6.4.4",
+    "@types/uuid": "^8.3.4",
     "apollo-server-core": "^3.7.0",
     "apollo-server-express": "^3.6.7",
     "argon2": "^0.28.5",
@@ -33,11 +36,15 @@
     "express": "^4.18.0",
     "express-session": "^1.17.3",
     "graphql": "^15.3.0",
+    "ioredis": "^5.0.6",
+    "nodemailer": "^6.7.5",
     "pg": "^8.7.3",
     "redis": "^4.1.0",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
+    "typeorm": "^0.3.6",
     "typescript": "^4.6.3",
+    "uuid": "^8.3.2",
     "yarn": "^1.22.18"
   },
   "devDependencies": {
