--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,20 @@ services:
    volumes:
      - db-data:/var/lib/postgresql/data
 
+ typeorm:
+   container_name: BenAwad-FullStack-React-GraphQL-Tut-Typeorm
+   image: postgres
+   restart: always
+   environment:
+     POSTGRES_DB: lireddit2
+     POSTGRES_USER: abdullah
+     POSTGRES_PASSWORD: haris123
+     PGDATA: /var/lib/postgresql/data
+   ports:
+     - "4999:5432"
+   volumes:
+     - typeorm-data:/var/lib/postgresql/data-Typeorm
+
  pgadmin:
    container_name: pgadmin4_container
    image: dpage/pgadmin4:6.8
@@ -54,4 +68,5 @@ volumes:
  db-data:
  pgadmin-data:
  redis-data:
+ typeorm-data:
 #  dbeaver-data:
